<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    

    <string name="app_name">网上商城</string>
    <string name="shouye_for_search">搜索</string>
    <string name="action_settings">Settings</string>
    <string name="user_passward">密码：</string>
    <string name="buyer_login">买家登陆</string>
    <string name="seller_login">卖家登陆</string>
    <string name="user_register">新用户注册</string>
    <string name="user">用户登陆</string>
    <string name="register_confirm">确认注册</string>
    <string name="login_account">账户：</string>
    <string name="register_account">注册账户：</string>
    <string name="register_passward">注册密码：</string>
    <string name="register_confirm_passward">确认密码：</string>
    <string name="register_name">用户登陆</string>
    <string name="register_type">用户类型：</string>
    <string name="user_buyer">买家</string>
    <string name="user_seller">卖家</string>
    
    
     <string name="order_query">订单查询</string>
    <string name="my_wallet">我的钱包</string>
    <string name="shipping_address">收货地址</string>
    <string name="version_information">版本信息</string>
    <string name="account_management">账户管理</string>
    
    
    
    <color name="ivory">#fffff0</color><!--象牙色 --> 
    <color name="yellow">#ffff00</color><!--黄色 -->    
    <color name="bisque">#ffe4c4</color><!--桔黄色 --> 
    <color name="moccasin">#ffe4b5</color><!--鹿皮色 --> 
    <color name="navajowhite">#ffdead</color><!--纳瓦白 --> 
    <color name="peachpuff">#ffdab9</color><!--桃色 --> 
    <color name="gold">#ffd700</color><!--金色 --> 
    <color name="pink">#ffc0cb</color><!--粉红色 --> 
    <color name="lightpink">#ffb6c1</color><!--亮粉红色 --> 
    <color name="orange">#ffa500</color><!--橙色 --> 
    
    <color name="test1">#ff00ffff</color>
    <color name="test2">#ffff0000</color>
  
</resources>
